--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,13 @@
 server.port=8080
 
+#=======FOR MARIADB========
 spring.datasource.url=jdbc:mariadb://127.0.0.1:3306/infotector
 spring.datasource.username=root
 spring.datasource.password=000000
 spring.jpa.hibernate.ddl-auto=create
+
+#=======FOR MONGODB======
+spring.data.mongodb.uri=mongodb://localhost:27017
+spring.data.mongodb.database=infotector
+spring.data.mongodb.username=hyun
+spring.data.mongodb.password=000000
